<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shape\'z</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="classic">Classic Mode</string>
    <string name="memory">Memory Mode</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="startGame">Start Game</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="playAgain">Try Again</string>
    <string name="toHome">Home</string>
    <string name="gameOver">Game Over</string>
    <string name="score">Your score is:</string>
    <string name="title_activity_memory">MemoryActivity</string>
    <string name="title_activity_memory_game">MemoryGame</string>
    <string name="lvl1">Level 1</string>
    <string name="lvl2">Level 2</string>
    <string name="lvl3">Level 3</string>
    <string name="memoryG">Memory Game</string>
    <string name="pick">Pick your level:</string>
    <string name="go">Go</string>
    <string name="shownext">Next Sequence</string>
    <string name="tryagain">Show Again</string>
    <string name="tries">Tries Left:</string>
    <string name="back">Back</string>
    <string name="next">Continue</string>
    <string name="survival">Survival</string>
    <string name="hs">High Scores</string>
    <string name="yhs">Your High Scores:</string>
    <string name="title_activity_survival">SurvivalActivity</string>
    <string name="title_activity_high_scores">HighScoresActivity</string>

</resources>
