<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bluebackground"
    tools:context="com.example.shapez.MemoryGame" >

    <Button
        android:id="@+id/goBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/startbutton"
        android:textColor="#5376e0"
        android:onClick="showImages"
        android:text="" />

    <ImageButton
        android:id="@+id/blueBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@+id/redBtn"
        android:layout_marginBottom="20dp"
        android:layout_alignRight="@+id/redBtn"
        android:background="@drawable/blue_button"
        android:onClick="blueClicked" />

    <ImageButton
        android:id="@+id/yellowBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/yellow_button"
        android:onClick="yellowClicked" />

    <ImageButton
        android:id="@+id/greenBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@+id/yellowBtn"
        android:layout_alignLeft="@+id/yellowBtn"
        android:layout_marginBottom="20dp"
        android:background="@drawable/green_button"
        android:onClick="greenClicked" />

    <ImageButton
        android:id="@+id/redBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/red_button"
        android:onClick="redClicked" />

    <Button
        android:id="@+id/againBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#00000000"
        android:text="@string/tryagain"
        android:onClick="showAgainOnBtnPush"
        android:textColor="#5376e0" />

    <TextView
        android:id="@+id/triesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tries"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/sequenceView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@+id/triesLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/blank" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#00000000"
        android:textColor="#5376e0"
        android:onClick="showImages"
        android:text="@string/shownext" />

    <Button
        android:id="@+id/backBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="backToPrevious"
        android:text=""
        android:background="@drawable/back_button" />

</RelativeLayout>
