<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluebackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shapez.SurvivalActivity" >

    <ImageButton
        android:id="@+id/yellowBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/yellow_button"
        android:onClick="yellowBtnClicked" />

    <ImageButton
        android:id="@+id/redBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/red_button"
        android:onClick="redBtnClicked" />

    <ImageButton
        android:id="@+id/greenBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@+id/yellowBtn"
        android:layout_alignLeft="@+id/yellowBtn"
        android:layout_marginBottom="10dp"
        android:background="@drawable/green_button"
        android:onClick="greenBtnClicked" />

    <ImageButton
        android:id="@+id/blueBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/redBtn"
        android:layout_alignTop="@+id/greenBtn"
        android:background="@drawable/blue_button"
        android:onClick="blueBtnClicked" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:src="@drawable/blank" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/startbutton"
        android:onClick="startImage"
        android:text=""
        android:textColor="#5376e0" />

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#00000000"
        android:onClick="nextBtnTask"
        android:text="@string/next"
        android:textColor="#5376e0" />

    <Button
        android:id="@+id/againBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#00000000"
        android:onClick="againBtnTask"
        android:text="@string/tryagain"
        android:textColor="#5376e0" />

    <ImageView
        android:id="@+id/twoWrong"
        android:layout_width="40dp"
        android:layout_height="40dp"
		android:layout_below="@+id/oneWrong"
        android:src="@drawable/wrong" />

    <ImageView
        android:id="@+id/threeWrong"
        android:layout_width="40dp"
        android:layout_height="40dp"
		android:layout_below="@+id/twoWrong"
        android:src="@drawable/wrong" />

    <ImageView
        android:id="@+id/oneWrong"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/twoWrong"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginTop="14dp"
        android:src="@drawable/wrong" />

    <Button
        android:id="@+id/backBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="backToPrevious"
        android:text=""
        android:background="@drawable/back_button" />

</RelativeLayout>